initial commit to integrate mambaconv

--- a/cfgs/DNeRV_ReadySet.yaml
+++ b/cfgs/DNeRV_ReadySet.yaml
@@ -1,6 +1,6 @@
 seed: 5
 #----change to your own dataset path----#
-dataset_path: /mnt/tmp/UVG/Beauty
+dataset_path: /mnt/tmp/UVG/ReadySetGo
 
 dataset_type: all 
 model:
