--- a/cfgs/DNeRV_HoneyB.yaml
+++ b/cfgs/DNeRV_HoneyB.yaml
@@ -1,7 +1,6 @@
 seed: 5
 #----change to your own dataset path----#
-dataset_path: /mnt/tmp/UVG/Beauty
-
+dataset_path: /mnt/tmp/UVG/HoneyBee
 dataset_type: all 
 model:
   model_name: D_NeRV
