--- a/cfgs/DNeRV_ShakeNDry.yaml
+++ b/cfgs/DNeRV_ShakeNDry.yaml
@@ -1,6 +1,6 @@
 seed: 5
 #----change to your own dataset path----#
-dataset_path: /mnt/tmp/UVG/Beauty
+dataset_path: /mnt/tmp/UVG/ShakeNDry
 
 dataset_type: all 
 model:
